--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,9 +11,28 @@ and open the template in the editor.
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css">
     <script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.js"></script>
+    <script src="js/libs/underscore/underscore-min.js"></script>
+    <script src="js/libs/parse/parse-1.3.0.min.js"></script>
+    
+    <script src="js/controller/app.js"></script>
+    <script src="js/view/loginView.js"></script>
 </head>
     <body>
-        <div data-role="page" id="eventList">
+        <!--Facebook Integration -->
+        <div id="fb-root"></div>
+        <!-- App Interface -->
+         <div data-role="page" id="login-view">
+            <div data-role="header">
+                <h1>LocalAppenings</h1>
+            </div>
+            <div data-role="content" class="login">
+                <script type="text/template" id="facebook-login">
+                    <button id="facebook-btn">Login with Facebook</button>
+                </script>
+            </div> 
+        </div>
+        
+        <div data-role="page" id="eventApp">
             <div data-role="header">
                 <a href="#" class="ui-btn">Home</a>
                 <h1>Feed</h1>
@@ -47,7 +66,7 @@ and open the template in the editor.
         </div>
         <div data-role="page" id="eventDetails">
             <div data-role="header">
-                <a href="#eventList" data-role="button" data-transition="slide">Back</a>
+                <a href="#eventList" data-role="button" data-transition="slide" data-direction="reverse">Back</a>
                 <h1>Event Name</h1>
             </div>
             <div data-role="content">
